fixed phantom empty scrollbars

--- a/main.css
+++ b/main.css
@@ -215,7 +215,7 @@ svg.signin .iconic-property-fill {
 /* page content */
 
 #full-page {
-    overflow: scroll;
+    overflow: auto;
 }
 
 main {
